Fix left column shift

--- a/src/angular-planning/planning.scss
+++ b/src/angular-planning/planning.scss
@@ -202,6 +202,7 @@ $planning-end-of-week-bar-width: 4px;
 
         th.planning-resources {
             width: 150px;
+            padding: 0;
         }
     }
 }
